--- a/css/style.css
+++ b/css/style.css
@@ -27,9 +27,15 @@ main{
 height: calc(100vh - 80px);
 }
 
+h1{
+margin-bottom: 15px;
+font-size: 25px;
+}
+
 h2{
 font-size: 14px;
 margin-bottom: 10px;
+color: white;
 }
 
 h3{
@@ -40,7 +46,36 @@ font-weight: bold;
 h4{
 font-size: 10px;
 color: #7f7f7f;
+}
 
+/* hover */
+
+.add-playlist:hover{
+color: white;
+background-color: white;
+}
+
+.btn:hover{
+font-size: 14px;
+}
+.nome-playlist li:hover,
+.icon-text:hover,
+.fa-folder:hover,
+.fa-heart:hover {
+color: white;
+}
+
+.footer-left h4:hover{
+color: white;
+text-decoration: underline;
+}
+
+.footer-center .fa-circle-play:hover{
+font-size: 35px;
+}
+
+.progress-bar .value:hover{
+background-color: #c6f276;
 }
 
 /* Main bar */
@@ -193,9 +228,54 @@ text-transform: uppercase;
 #bottom-playlist{
 height: calc(100vh - 80px);
 width: calc(100vw - 50px);
-padding: 100px 0;
+padding: 100px 20px;
 overflow-y: auto;
 color: white;
+}
+
+.row{
+flex-wrap: wrap;
+margin: 0 -10px;
+}
+
+.col{
+flex-basis:50%;
+padding: 10px;
+}
+
+.card{
+margin-bottom: 30px;
+}
+
+.card-image img{
+max-width: 100%;
+display: block;
+}
+
+.card-text {
+text-align: center;
+}
+
+#bottom-playlist h3{
+color:#7f7f7f;
+margin-bottom: 20px;
+}
+
+#bottom-playlist h2{
+margin-top: 15px;
+}
+
+.card-rounded{
+width: 100%;
+height: 100%;
+border-radius: 50%;
+overflow: hidden;
+}
+
+.card-rounded img{
+width: 100%;
+height: 100%;
+object-fit: cover;
 }
 
 /* Footer */
@@ -238,32 +318,56 @@ font-size: 30px;
 padding: 0 20px;
 }
 
+.footer-center .progress-bar{
+align-items: center;
+margin-top: 10px;
+}
+
+.progress-bar h4{
+color: white;
+}
+
+.bar{
+height: 5px;
+width: 100%;
+background-color: #7f7f7f;
+position: relative;
+border-radius: 5px;
+margin: 0 5px;
+}
+
+.bar .value{
+position: absolute;
+background-color: white;
+top: 0;
+left: 0;
+width: 20%;
+height: 100%;
+border-radius: 5px;
+}
+
 .footer-right i{
 font-size: 13px;
 padding: 0 7px;
 }
+    
+.footer-right .progress-bar{
+width: 70px;
+}
+
+.footer-right{
+align-items: center;
+}
+
 
 /* ************************************* */
 /* Media Query Breakpoints */
 /* ************************************* */
 
-/* ***************** xs */
-
-@media screen and (min-width: 500px){
-
-.xs-flex {
-display: flex;
-}
-
-}
 
 /* ***************** s */
 
 @media screen and (min-width: 576px){
-
-.s-flex {
-display: flex;
-}
 
 .main-bar{
 width: 230px;
@@ -319,25 +423,22 @@ margin-right: 10px;
 .icon.profile img{
 width: 18px;
 }
-
 }
 
 /* ***************** md */
 
 @media screen and (min-width: 768px){
 
-.md-flex {
-display: flex;
+.col{
+flex-basis: 25%;
 }
-
 }
 
 /* ***************** lg */
 
 @media screen and (min-width: 992px){
 
-.lg-flex {
-display: flex;
+.col{
+flex-basis: calc(100% / 6);
 }
-
 }
